# dicry

./: Cargo.toml
front-end-dictionary/: package-lock.json  package.json
front-end-dictionary/public/: index.html
front-end-dictionary/src/: App.js  api.js
src/: main.rs
